--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "version": "1.0",
   "private": true,
   "scripts": {
+    "dev": "next dev",
+  "build": "next build",
+  "start": "next start",
     "lint": "next lint",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
@@ -25,7 +28,11 @@
     "react-toastify": "^10.0.5",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
-    "typewriter-effect": "^2.21.0"
+    "typewriter-effect": "^2.21.0",
+    "next": "^14.1.3",
+  "react": "^18.2.0",
+  "react-dom": "^18.2.0"
+    
   },
   "devDependencies": {
     "@react-three/drei": "^9.88.4",
